[tool.poetry]
name = "CaBE"
version = "0.1.2"
description = ""
authors = ["Takuro Niitsuma <bakednt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.1"
sacred = "^0.8.1"
transformers = "^2.4"
torch = "^1.4"
numpy = "^1.18"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
taskipy = "^1.1"

[tool.taskipy.tasks]
download = 'poetry run task download:test && poetry run task download:valid'
download:test = 'wget https://github.com/malllabiisc/cesi/blob/master/data/reverb45k/reverb45k_test?raw=true -O ./data/reverb45k_test'
download:valid = 'wget https://github.com/malllabiisc/cesi/blob/master/data/reverb45k/reverb45k_valid?raw=true -O ./data/reverb45k_valid'
cache:clear = 'rm ./data/*.pkl'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"