[tool.poetry]
name = "CaBE"
version = "0.2.0"
description = ""
authors = ["Takuro Niitsuma <bakednt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.1"
transformers = "^2.4"
torch = "^1.4"
numpy = "^1.18"
allennlp = "^0.9.0"
mlflow = "^1.6.0"
hydra-core = "^0.11.3"
hdbscan = "^0.8.24"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
taskipy = "^1.1"
ipdb = "^0.12.3"
python-language-server = "^0.31.8"

[tool.taskipy.tasks]
download_dataset = 'poetry run task download_test && poetry run task download_valid'
download_test = 'wget https://github.com/malllabiisc/cesi/blob/master/data/reverb45k/reverb45k_test?raw=true -O ./data/reverb45k_test'
download_valid = 'wget https://github.com/malllabiisc/cesi/blob/master/data/reverb45k/reverb45k_valid?raw=true -O ./data/reverb45k_valid'
cache_clear = 'rm ./data/*.pkl'
prepare = 'export PYTHONPATH=.'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"